# django-read-only-admin

./: .bandit  .coveragerc  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS  MANIFEST.in  MIT-LICENSE  Makefile  Pipfile  README.rst  manage.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml  dependabot.yml
.github/workflows/: build.yml  check-requirements.yml  check.yml  coveralls.yml  test.yml
read_only_admin/: __init__.py  admin.py  apps.py  conf.py  models.py  settings.py  signals.py  utils.py
read_only_admin/locale/en/LC_MESSAGES/: django.mo  django.po
read_only_admin/locale/uk/LC_MESSAGES/: django.mo  django.po
read_only_admin/templates/admin/: pagination.html
read_only_admin/templates/read_only_admin/: change_form.html
read_only_admin/templates/read_only_admin/includes/: fieldset.html
read_only_admin/templates/read_only_admin/includes/legacy/: fieldset.html
read_only_admin/templates/read_only_admin/includes/modern/: fieldset.html
read_only_admin/templates/read_only_admin/includes/old/: fieldset.html
read_only_admin/templates/read_only_admin/legacy/: change_form.html
read_only_admin/templates/read_only_admin/modern/: change_form.html
read_only_admin/templatetags/: __init__.py  read_only_admin_tags.py
tests/: __init__.py  settings.py  test_admin.py  test_signals.py  test_utils.py
tests/templatetags/: __init__.py  test_read_only_admin_tags.py
