# django-read-only-admin
# setup.cfg


[metadata]
name = django-read-only-admin
version = 0.12.1
description = Really full Django read only admin implementation
python-requires = >=3.6
license-file = MIT-LICENSE
author = Alexei Andrushievich
author-email = vint21h@vint21h.pp.ua
url = https://github.com/vint21h/django-read-only-admin/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
license = MIT
long-description = file:README.rst
long-description-content-type = text/x-rst
keywords = django,django-admin,admin,read-only


[options]
packages = find:
zip_safe = False
include_package_data = True
test_suite = tests
install_requires =
    django>=2.2<=3.1
    django-appconf>=1.0.3


[options.extras_require]
test =
    attrs==19.3.0
    bandit==1.6.2
    black==19.10b0
    check-manifest==0.42
    coverage==5.1
    coveralls==2.0.0
    django-nose==1.4.6
    django-stubs==1.5.0
    dodgy==0.2.1
    flake8-annotations-complexity==0.0.4
    flake8-bugbear==20.1.4
    flake8-docstrings==1.5.0
    flake8==3.8.3
    interrogate==1.2.0
    isort[pipfile]==4.3.21
    mypy==0.780
    nose-exclude==0.5.0
    nose-timer==1.0.0
    pep8-naming==0.10.0
    pre-commit-hooks==3.1.0
    pre-commit==2.5.0
    pygments==2.6.1
    pylint-django==2.0.15
    pylint==2.5.3
    pyroma==2.6
    readme_renderer==26.0
    rednose==1.3.0
    removestar==1.2.2
    seed-isort-config==2.2.0
    tox-pyenv==1.1.0
    tox-travis==0.12
    tox==3.15.2
    twine==3.1.1


[options.packages.find]
exclude =
    tests.*
    tests


[wheel]
universal = False


[bdist_wheel]
universal = False


[sdist]
formats = zip


[mypy]
files = read_only_admin,tests
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
plugins = mypy_django_plugin.main


[mypy.plugins.django-stubs]
django_settings_module = tests.settings


[flake8]
max-line-length = 88
select = B,C,E,F,W,T4
doctests = True


[check-manifest]
ignore =
    .bandit
    .editorconfig
    .env
    .env.example
    .envrc
    .gitattributes
    .gitignore
    .pre-commit-config.yaml
    .pylintrc
    .python-version
    .travis.yml
    Makefile
    Pipfile
    tests
    tests.*
    TODO
    tox.ini
ignore-bad-ideas =
    *.mo


[coverage:run]
branch = True
source = read_only_admin
omit =
    */__init__.py
    read_only_admin/apps.py


[coverage:report]
omit =
    */__init__.py
    read_only_admin/apps.py
exclude_lines =
    pragma: no cover


[isort]
balanced_wrapping = True
combine_as_imports = True
default_section = FIRSTPARTY
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = True
include_trailing_comma = True
known_first_party = read_only_admin
line_length = 88
lines_after_imports = 2
length_sort = True
multi_line_output = 3
use_parentheses = True
virtual_env = $VIRTUAL_ENV
known_third_party = appconf,django,setuptools
