# django-read-only-admin
# setup.cfg


[metadata]
name = django-read-only-admin
version = 0.14.11
description = Really full Django read only admin implementation
python-requires = >=3.6
license-file = MIT-LICENSE
author = Alexei Andrushievich
author-email = vint21h@vint21h.pp.ua
url = https://github.com/vint21h/django-read-only-admin/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
license = MIT
long-description = file:README.rst
long-description-content-type = text/x-rst
keywords = django,django-admin,admin,read-only


[options]
packages = find:
zip_safe = False
include_package_data = True
test_suite = tests
install_requires =
    django>=2.2<=3.2
    django-appconf>=1.0.3


[options.extras_require]
test =
    attrs==20.3.0
    bandit==1.7.0
    black==20.8b1
    check-manifest==0.46
    check-wheel-contents==0.2.0
    coverage==5.3.1
    coveralls==3.0.0
    curlylint==0.12.0
    darglint==1.5.8
    dennis==0.9
    django-nose==1.4.7
    django-stubs==1.7.0
    dodgy==0.2.1
    flake8-annotations-complexity==0.0.6
    flake8-annotations-coverage==0.0.5
    flake8-bugbear==20.11.1
    flake8-docstrings==1.5.0
    flake8-fixme==1.1.1
    flake8==3.8.4
    importlib-metadata==3.4.0
    interrogate==1.3.2
    isort==5.7.0
    mypy==0.790
    nose-exclude==0.5.0
    nose-timer==1.0.0
    pep8-naming==0.11.1
    polint==0.4
    pre-commit-hooks==3.4.0
    pre-commit==2.9.3
    pygments==2.7.4
    pylint-django==2.4.2
    pylint==2.6.0
    pyroma==2.6
    readme_renderer==28.0
    rednose==1.3.0
    removestar==1.2.2
    seed-isort-config==2.2.0
    tabulate==0.8.7
    tox-gh-actions==2.3.0
    tox-pyenv==1.1.0
    tox==3.21.1
    twine==3.3.0


[options.packages.find]
exclude =
    tests.*
    tests


[wheel]
universal = False


[bdist_wheel]
universal = False


[sdist]
formats = zip


[mypy]
files = read_only_admin,tests
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
plugins = mypy_django_plugin.main


[mypy.plugins.django-stubs]
django_settings_module = tests.settings


[flake8]
max-line-length = 88
select = B,C,E,F,W,T4
doctests = True


[check-manifest]
ignore =
    .editorconfig
    .env
    .env.example
    .envrc
    .gitattributes
    .github
    .gitignore
    .pre-commit-config.yaml
    .pylintrc
    .python-version
    AUTHORS
    Makefile
    MIT-LICENSE
    Pipfile
    README.rst
    tests
    tests.*
    TODO
ignore-bad-ideas =
    *.mo


[coverage:run]
branch = True
source = read_only_admin
omit =
    */__init__.py
    read_only_admin/apps.py


[coverage:report]
omit =
    */__init__.py
    read_only_admin/apps.py
exclude_lines =
    pragma: no cover


[isort]
balanced_wrapping = True
combine_as_imports = True
default_section = FIRSTPARTY
force_grid_wrap = 0
force_sort_within_sections = True
force_to_top = True
include_trailing_comma = True
known_first_party = read_only_admin
line_length = 88
lines_after_imports = 2
length_sort = True
multi_line_output = 3
use_parentheses = True
virtual_env = $VIRTUAL_ENV
known_third_party = appconf,django,setuptools


[darglint]
docstring_style = sphinx


[bandit]
skips = B507
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B323,B324,B325,B401,B402,B403,B404,B405,B406,B407,B408,B409,B410,B411,B412,B413,B501,B502,B503,B504,B505,B506,B601,B602,B603,B604,B605,B606,B607,B608,B609,B610,B611,B701,B702,B703


[tool:check-wheel-contents]
ignore = W004


[tox:tox]
skip_missing_interpreters = True
tox_pyenv_fallback = False
skipsdist = False
envlist =
    {py36,py37,py38,py39}-2.2.x
    {py36,py37,py38,py39}-3.0.x
    {py36,py37,py38,py39}-3.1.x
    check
    check-build


[testenv]
usedevelop = True
setenv =
    PYTHONDONTWRITEBYTECODE=1
deps =
    2.2.x: Django>=2.2,<3.0
    3.0.x: Django>=3.0,<3.1
    3.1.x: Django>=3.1,<3.2
commands=
    pip install .[test]
    make test
whitelist_externals =
    make


[testenv:check]
skip_install = True
commands =
    make check
whitelist_externals =
    make


[testenv:check-build]
skip_install = True
commands =
    make build -B
    make check-build -B
whitelist_externals =
    make

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39
